fix: decrease flickering on page load, complete fallback in case if css vars are not supported

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,12 @@
 :root {
   text-wrap: wrap;
-  background-color: #00002a;
-  color: #ffffff;
   --line-width: 0.15rem;
   --rounding: 0.4rem;
   --regular-fonts: "Jura", "Tahoma", sans-serif;
   --header-fonts: "Unbounded", "Georgia", sans-serif;
   --var-support-safety: transparent;
+  background-color: var(--var-support-safety);
+  color: var(--var-support-safety);
 }
 
 /* theme-specified coloring: */
@@ -79,6 +79,7 @@ main {
 
 #nav-bar {
   display: table;
+  
   background-image: linear-gradient(
     to bottom,
     var(--bg-gradient-top) 70%,
